--- a/build.gradle
+++ b/build.gradle
@@ -6,16 +6,16 @@ repositories {
 
 dependencies {
     compile fileTree(dir: '../build/libs', include: ['*.jar'])
-    compile "com.revolutionanalytics.deployr:jDeployR:7.3.1"
+    compile "com.revolutionanalytics.deployr:jDeployR:7.4.0"
 }
 
 jar {
     baseName = 'jRBroker'
-    version =  '7.3.1'
+    version =  '7.4.0'
 }
 
 javadoc {
-    title = "DeployR 7.3.1 Java RBroker Framework"
+    title = "DeployR Java RBroker Framework"
     options.overview = "src/main/java/overview.html"
     exclude "com/revo/deployr/client/factory/RClientFactory.java"
     exclude "com/revo/deployr/client/broker/task/**/*.java"
