--- a/test/build.gradle
+++ b/test/build.gradle
@@ -1,18 +1,21 @@
 apply plugin: 'java'
 
+sourceCompatibility = "1.6"
+targetCompatibility = "1.6"
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
     compile fileTree(dir: '../build/libs', include: ['*.jar'])
-    compile "com.revolutionanalytics.deployr:jDeployR:7.4.0"
+    compile "com.revolutionanalytics.deployr:jDeployR:7.4.1"
     testCompile("junit:junit:4.10")
 }
 
 test {
     systemProperty "connection.protocol", "http://"
-    systemProperty "connection.endpoint", "localhost:7300/deployr"
+    systemProperty "connection.endpoint", "localhost:7400/deployr"
     systemProperty "username", "testuser"
     systemProperty "password", "changeme"
 }
