--- a/examples/tutorial/build.gradle
+++ b/examples/tutorial/build.gradle
@@ -1,22 +1,25 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
+sourceCompatibility = "1.6"
+targetCompatibility = "1.6"
+
 applicationDefaultJvmArgs = ["-Dendpoint=http://localhost:7400/deployr",
                              "-Dusername=testuser",
                              "-Dpassword=changeme"]
-
+                             
 repositories {
     mavenCentral()
 }
 
 dependencies {
     compile fileTree(dir: '../../build/libs', include: ['*.jar'])
-    compile "com.revolutionanalytics.deployr:jDeployR:7.4.0"
+    compile "com.revolutionanalytics.deployr:jDeployR:7.4.1"
 }
 
 jar {
     baseName = 'rbroker-tutorial'
-    version =  '7.4.0'
+    version =  '7.4.1'
 }
 
 task execute(type:JavaExec) {
