--- a/examples/tutorial/build.gradle
+++ b/examples/tutorial/build.gradle
@@ -4,9 +4,11 @@ apply plugin: 'application'
 sourceCompatibility = "1.6"
 targetCompatibility = "1.6"
 
-applicationDefaultJvmArgs = ["-Dendpoint=http://localhost:7400/deployr",
-                             "-Dusername=testuser",
-                             "-Dpassword=changeme"]
+applicationDefaultJvmArgs = [ "-Dconnection.protocol=http://",
+                              "-Dconnection.endpoint=localhost:7400/deployr",
+                              "-Dallow.SelfSignedSSLCert=false",
+                              "-Dusername=testuser",
+                              "-Dpassword=changeme"]
                              
 repositories {
     mavenCentral()
@@ -14,7 +16,7 @@ repositories {
 
 dependencies {
     compile fileTree(dir: '../../build/libs', include: ['*.jar'])
-    compile "com.revolutionanalytics.deployr:jDeployR:7.4.1"
+    compile "com.revolutionanalytics.deployr:jDeployR:7.4.3"
 }
 
 jar {
