--- a/test/build.gradle
+++ b/test/build.gradle
@@ -9,13 +9,14 @@ repositories {
 
 dependencies {
     compile fileTree(dir: '../build/libs', include: ['*.jar'])
-    compile "com.revolutionanalytics.deployr:jDeployR:7.4.1"
+    compile "com.revolutionanalytics.deployr:jDeployR:7.4.3"
     testCompile("junit:junit:4.10")
 }
 
 test {
     systemProperty "connection.protocol", "http://"
     systemProperty "connection.endpoint", "localhost:7400/deployr"
+    systemProperty "allow.SelfSignedSSLCert", "false"
     systemProperty "username", "testuser"
     systemProperty "password", "changeme"
 }
