--- a/test/build.gradle
+++ b/test/build.gradle
@@ -9,7 +9,7 @@ repositories {
 
 dependencies {
     compile fileTree(dir: '../build/libs', include: ['*.jar'])
-    compile fileTree(dir: ../'../lib', include: ['*.jar'])
+    compile fileTree(dir: '../../lib', include: ['*.jar'])
     testCompile("junit:junit:4.10")
 }
 
