--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,12 @@ repositories {
 
 dependencies {
     compile fileTree(dir: '../build/libs', include: ['*.jar'])
-    compile "com.revolutionanalytics.deployr:jDeployR:7.4.8"
+    compile "com.microsoft.deployr:jDeployR:8.0.5"
 }
 
 jar {
     baseName = 'jRBroker'
-    version =  '8.0.0'
+    version =  '8.0.5'
 }
 
 javadoc {
