--- a/examples/tutorial/build.gradle
+++ b/examples/tutorial/build.gradle
@@ -5,7 +5,7 @@ sourceCompatibility = "1.6"
 targetCompatibility = "1.6"
 
 applicationDefaultJvmArgs = [ "-Dconnection.protocol=http://",
-                              "-Dconnection.endpoint=localhost:8000/deployr",
+                              "-Dconnection.endpoint=localhost:8050/deployr",
                               "-Dallow.SelfSignedSSLCert=false",
                               "-Dusername=testuser",
                               "-Dpassword=TESTUSER_PASSWORD"]
@@ -16,7 +16,7 @@ repositories {
 
 dependencies {
     compile fileTree(dir: '../../build/libs', include: ['*.jar'])
-    compile "com.revolutionanalytics.deployr:jDeployR:7.4.8"
+    compile "com.microsoft.deployr:jDeployR:8.0.5"    
 }
 
 jar {
