--- a/test/build.gradle
+++ b/test/build.gradle
@@ -8,14 +8,14 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: '../build/libs', include: ['*.jar'])
-    compile "com.revolutionanalytics.deployr:jDeployR:7.4.8"
+    compile fileTree(dir: '../build/libs', include: ['*.jar'])    
+    compile "com.microsoft.deployr:jDeployR:8.0.5"
     testCompile("junit:junit:4.10")
 }
 
 test {
     systemProperty "connection.protocol", "http://"
-    systemProperty "connection.endpoint", "localhost:8000/deployr"
+    systemProperty "connection.endpoint", "localhost:8050/deployr"
     systemProperty "allow.SelfSignedSSLCert", "false"
     systemProperty "username", "testuser"
     systemProperty "password", "TESTUSER_PASSWORD"
